<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <TextView
        android:id="@+id/AddTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/addtask_label"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AddTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/addtask_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskImageView" />

    <EditText
        android:id="@+id/AddTaskActivityTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/addtask_tasktitle"
        android:ems="10"
        android:hint="@string/addtask_tasktitle"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#00796B"
        app:layout_constraintStart_toStartOf="@+id/AddTaskTitle"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskTitle" />

    <TextView
        android:id="@+id/AddTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/addtask_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskTitle" />

    <EditText
        android:id="@+id/AddTaskActivityDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints="@string/addtask_descriptioninput"
        android:ems="10"
        android:hint="@string/addtask_descriptioninput"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#00796B"
        app:layout_constraintStart_toStartOf="@+id/AddTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskTitle" />

    <Button
        android:id="@+id/AddTaskActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/saveusername_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/AddTaskActivityTaskStateSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityDescription" />

    <Spinner
        android:id="@+id/AddTaskTeamSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/task_team_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTaskStateSpinner" />

    <ImageView
        android:id="@+id/AddTaskActivityTaskImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/add_task_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskLabel"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>