<resources>
    <string name="app_name">TaskMaster</string>
    <string name="mytasks_label">My Tasks</string>
    <string name="placeholder_image">placeholder image on main activity</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="addtask_label">Add Task</string>
    <string name="addtask_title">Task Title</string>
    <string name="addtask_description">Task Description</string>
    <string name="addtaskactivity_button">ADD TASK</string>
    <string name="addtask_tasktitle">My Task</string>
    <string name="addtask_descriptioninput">Do something...</string>
    <string name="addtask_message" />
    <string name="alltasks_label">All Tasks</string>
    <string name="alltasksimgplaceholder">Image place holder for All Tasks page</string>
    <string name="username_input">Username</string>
    <string name="saveusername_btn">Save</string>
    <string name="userprofile_accessicon">Icon used to navigate to user profile page</string>
    <string name="description_lorenipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_task_name">No task name provided</string>
    <string name="no_task_description">No description provided</string>
    <string name="task_team_select">Select Task Team</string>
    <string name="signup_title">Sign Up!</string>
    <string name="editText_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signupsubmit_button">SUBMIT</string>
    <string name="verify_account">Verify Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="login_title">Login</string>
    <string name="logout">Logout</string>
    <string name="add_task_image">Task image</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description_speech_btn">Play Description</string>
</resources>