...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsActivityDescriptionButton" />

    <TextView
        android:id="@+id/TaskDetailsActivityTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/addtask_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
...
