<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBCCF6"
    tools:context=".activities.UserProfileActivity">

    <EditText
        android:id="@+id/UserProfileActivityUserNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/username_input"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#474544"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivityEmailTextView" />

    <Button
        android:id="@+id/UserProfileActivitySaveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/saveusername_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivityTeamSpinner"
        tools:ignore="VisualLintButtonSize" />

    <Spinner
        android:id="@+id/UserProfileActivityTeamSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/task_team_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivityUserNameInput" />

    <Button
        android:id="@+id/UserProfileActivitySignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivitySaveBtn" />

    <Button
        android:id="@+id/UserProfileActivityLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivitySignUpButton" />

    <Button
        android:id="@+id/UserProfileActivityLogoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileActivityLoginButton" />

    <TextView
        android:id="@+id/UserProfileActivityEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/editText_email"
        android:textColorHint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>